Init Index, Add deps, init DB

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,12 @@
-@(message: String)
-
-@main("Welcome to Play") {
-
-    @play20.welcome(message)
-
-}
+<!DOCTYPE html>
+<html ng-app="App">
+	<head>
+		<meta charset="utf-8">
+		<title>Gamers</title>
+		<meta name="author" content="Sacha Bron (Binary Brain)">
+</head>
+<body>
+	<h1>Hello HEIGre-doux!</h1>
+	<em>The best pun ever.</em>
+</body>
+</html>
