working menus API (/api/menus)

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 <html ng-app="App">
 	<head>
 		<meta charset="utf-8">
-		<title>Gamers</title>
+		<title>HEIGre-doux</title>
 		<meta name="author" content="Sacha Bron (Binary Brain)">
 </head>
 <body>
