Better look on Android

--- a/phonegap/www/less/index.less
+++ b/phonegap/www/less/index.less
@@ -5,6 +5,12 @@
 }
 
 html, body {
+	font-size: 26px;
+}
+
+h1 {
+  font-size: 48px;
+  text-align: center;
 }
 
 #container {
@@ -34,4 +40,8 @@ html, body {
 			}
 		}
 	}
+}
+
+.panel-title {
+	font-size: 30px;
 }
