--- a/phonegap/www/less/admin.less
+++ b/phonegap/www/less/admin.less
@@ -1,3 +1,5 @@
+@import "common";
+
 * {
 	margin: 0;
 	padding: 0;
@@ -13,7 +15,8 @@ h1 {
 	margin: 30px 0;
 }
 
-#container {
+.table {
+	border: 5px solid black;
 }
 
 #days {
