--- a/phonegap/www/less/index.less
+++ b/phonegap/www/less/index.less
@@ -51,6 +51,16 @@ h1 {
 			
 				#votes {
 					float: right;
+					
+					.btn-vote {
+						width: 50px;
+						height: 50px;
+					}
+
+					td {
+						text-align: center;
+						padding: 10px;
+					}
 				}
 			}
 		}
